# pyhs3

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  benchmark_WS-bbyy-non-resonant-non-param-isofix-unbinnedfix.json  compare_postfit.py  convert_workspace.py  example.py  noxfile.py  pixi.toml  plot_scan.py  pyproject.toml  quickfit_bbyy_reference.json  tbump.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeflash-optimize.yaml  docs.yml
.pixi/: setup_graphviz.sh
benchmarking/: README.md  analyze_graph_complexity.py  analyze_jaxpr.py  debug_optimized_graphs.py  debug_pytensor_poisson_optimization.py  debug_scalability_limits.py  pytensor_optimization_findings.md  pytensor_timing_pdf_evals.py  pytensor_timing_pdf_evals_ricardoV94.py  pytensor_timing_pdf_evals_ricardoV94_batched.py  pytensor_timing_pdf_evals_scalar.py  timing_comparison.py  timing_pdf_evals.py
benchmarking/scripts/: run_workspace_loading.py  utils.py
benchmarking/src/: config.py  plot_benchmark_overview.py  run_log_prob_construction.py  run_model_creation.py  run_workspace_loading.py  utils.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  abstracts.rst  acknowledgements.rst  api.rst  architecture.rst  broadcasting.rst  conf.py  defining_components.rst  development.rst  index.md  index.rst  model.rst  normalization.rst  structure.rst  talks.rst  testing.rst  visualization.rst  workspace.rst
docs/_scripts/: fetch_root_tag.py
docs/_static/css/: custom.css
docs/abstracts/: 20250716.rst  20251011.rst  20260325.rst
docs/bib/: talks.bib
examples/: README.md  compare_generic_integration.py  eval_nll_at_quickfit.py  eval_simple_muscan.py  exploring_minimization.py  minimization_dihiggs.py  nll_validation_dihiggs.py  plot_comparisons.py  plot_muscan_nll.py  plot_residuals.py  profile_scan_atlas_dihiggs.py
src/pyhs3/: __init__.py  allexjsontest.py  analyses.py  axes.py  base.py  collections.py  compile.py  compiled.py  context.py  core.py  data.py  distributions.py  domains.py  exceptions.py  functions.py  generic_parse.py  lazy.py  likelihoods.py  logging.py  metadata.py  model.py  networks.py  normalization.py  parameter_points.py  parse.py  roadmap.py  tensorutils.py  transpile.py  typing_compat.py  workspace.py
src/pyhs3/distributions/: __init__.py  basic.py  cms.py  composite.py  core.py  histfactory.py  histogram.py  mathematical.py  physics.py  standard.py.backup
src/pyhs3/distributions/histfactory/: __init__.py  axes.py  data.py  interpolations.py  modifiers.py  samples.py
src/pyhs3/functions/: __init__.py  core.py  standard.py
src/pyhs3/typing/: __init__.py  aliases.py  annotations.py  distribution.py  domain.py  function.py  metadata.py  misc.py  parameter_point.py
tests/: conftest.py  hs3testsuite_pyhs3_backend.py  test_analyses.py  test_annotations.py  test_axes.py  test_collections.py  test_compiled.py  test_cross_distribution_dependencies.py  test_data.py  test_distributions.py  test_domains.py  test_evaluable.py  test_functions.py  test_generic_parse.py  test_hfdc_model_constraints.py  test_hifa.py  test_histfactory.py  test_histfactory_axes.py  test_histfactory_interpolations.py  test_histfactory_modifiers.py  test_histfactory_samples.py  test_hs3testsuite.py  test_hs3testsuite_backend.py  test_likelihoods.py  test_log_space_likelihood.py  test_manual.py  test_model.py  test_model_likelihood.py  test_networks.py  test_normalization.py  test_normalization_integration.py  test_package.py  test_parameter_points.py  test_pdf.py  test_perf_knobs.py  test_realworld.py  test_roundtripping.py  test_transpile.py  test_unsafe_api.py  test_workspace.py  (+1 more)
tests/hs3testsuite/: known_failures.json  pin.json
tests/test_hifa/: simplemodel_uncorrelated-background_hs3.json
tests/test_histfactory/: simplemodel_uncorrelated-background_hs3.cache.pkl  simplemodel_uncorrelated-background_hs3.json
tests/test_likelihoods/: simplemodel_uncorrelated-background_hs3.json
tests/test_pdf/: combine_long_exercise_part1_nosys.json  nondefault_points_domains.json  rf501_simultaneouspdf.json  rf501_simultaneouspdf.py
tools/: audit_hs3testsuite.py
