[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "pyhs3"
authors = [
  { name = "Giordon Stark", email = "kratsg@gmail.com" },
]
description = "pure-Python HS3 implementation with tensors and autodiff"
readme = "README.rst"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    'rich',
    'rustworkx',
    'pytensor >= 2.33.0',
    'numpy',
    'sympy',
    'pydantic',
]

[project.optional-dependencies]
test = [
  "pytest >=9",
  "pytest-cov >=3",
  "pyhf >= 0.7.6",
  "pydocstyle",
  "scikit-hep-testdata >= 0.5.7",
  "pydot",
  "hist >= 2.7.0",
]
visualization = [
  "hist >= 2.7.0",
]
dev = [
  "pytest >=9",
  "pytest-cov >=3",
  "tbump>=6.7.0",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx-copybutton>=0.3.2,!=0.5.1",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
  "sphinx-click",
  "ipywidgets",
  "intersphinx_registry>=0.2411.17",
  "sphinx-issues",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-bibtex",
]

[project.urls]
Homepage = "https://github.com/scipp-atlas/pyhs3"
"Bug Tracker" = "https://github.com/scipp-atlas/pyhs3/issues"
Discussions = "https://github.com/scipp-atlas/pyhs3/discussions"
Changelog = "https://github.com/scipp-atlas/pyhs3/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/pyhs3/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"
scripts.doctest = "pytest --doctest-modules src/pyhs3 {args}"
installer = "uv"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config", "--doctest-glob=docs/*.rst"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:jsonschema.RefResolver is deprecated.*:DeprecationWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]
markers = [
    "slow: marks tests as slow (skipped by default, use --runslow to run)",
    "pydot: marks tests as requiring pydot (skipped by default, use --runpydot to run)",
]


[tool.coverage]
run.source = ["pyhs3"]
report.precision = 1
report.sort = "cover"
report.show_missing = true
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
mypy_path = ["src"]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "pyhs3.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  "pyhf.*",
  "sympy.*",  # https://github.com/sympy/sympy/pull/26158
  "hist.*",
]
ignore_missing_imports = true

[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]
isort.required-imports = ["from __future__ import annotations"]
#typing-modules = ["pyhs3.typing_compat"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"src/pyhs3/parse.py" = ["T201"]


[tool.pylint]
py-version = "3.10"
load-plugins = ["pylint_pydantic"]
extension-pkg-allow-list = ["rustworkx"]
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "invalid-name",
  "duplicate-code",
]


[tool.pydocstyle]
select = ["D1"]
add_ignore = [
  "D100",
  "D105",
]
